# rgitui

.github/workflows/: ci.yml  release.yml
crates/rgitui/: Cargo.toml
crates/rgitui_git/src/: types.rs
crates/rgitui_git/src/project/: auth.rs  local_ops.rs
crates/rgitui_workspace/src/: bisect_view.rs  branch_dialog.rs  command_palette.rs  confirm_dialog.rs  create_pr_dialog.rs  detail_panel.rs  lib.rs  reflog_view.rs  repo_clone_dialog.rs  repo_opener.rs  shortcuts_help.rs  stash_branch_dialog.rs  submodule_view.rs  tag_dialog.rs  toolbar.rs
crates/rgitui_workspace/src/settings_window/: events.rs
crates/rgitui_workspace/src/workspace/: events.rs  layout.rs  mod.rs  state.rs  tabs.rs
